Added /about page

--- a/mat383/layouts/_default/baseof.html
+++ b/mat383/layouts/_default/baseof.html
@@ -34,7 +34,7 @@
 			<a href="/blog" style="color:#ccc" class="{{if or (hasPrefix .RelPermalink "/blog/") (hasPrefix .RelPermalink "/tags/")}}activepage{{end}}">Blog</a>
 			<a href="/now" style="color:#ccc" class="{{if hasPrefix .RelPermalink "/now/"}}activepage{{end}}">Now</a>
 			<a href="/projects" style="color:#ccc" class="{{if hasPrefix .RelPermalink "/projects/"}}activepage{{end}}">Projects</a>
-			<a href="/contact" style="color:#ccc" class="{{if hasPrefix .RelPermalink "/contact/"}}activepage{{end}}">Contact</a>
+			<a href="/about" style="color:#ccc" class="{{if hasPrefix .RelPermalink "/about/"}}activepage{{end}}">About</a>
 		</div>
 	</div>
 </nav>
