--- a/mat383/layouts/partials/guestbook.html
+++ b/mat383/layouts/partials/guestbook.html
@@ -1,8 +1,14 @@
 <div id="commentSection">
-    <button id="loadComments" class="loadcommentsbutton">
-        <p>Load Guestbook</p>
-        <img class="loadcommentsicon" src="/icons/guestbook-green.png" alt="Guestbook icon" style="height:36px; width: 40px;">
-    </button>
+    <div class="loadcommentsbuttoncontainer">
+        <button id="loadComments" class="loadcommentsbutton _1">
+            <p>Load Guestbook</p>
+            <img class="loadcommentsicon" src="/icons/guestbook-green.png" alt="Guestbook icon" style="height:36px; width: 40px;">
+        </button>
+        <button class="loadcommentsbutton _2">
+            <p>Load Guestbook</p>
+            <img class="loadcommentsicon" src="/icons/guestbook-green.png" alt="Guestbook icon" style="height:36px; width: 40px;">
+        </button>
+    </div>
 </div>
 
 <!-- Placeholder for comment box -->
