Added glow to some more links

--- a/mat383/layouts/partials/taglist2.html
+++ b/mat383/layouts/partials/taglist2.html
@@ -1,5 +1,5 @@
 <!--just taglist but without links-->
-{{- if isset .Params "tags" -}}
+{{/*{{- if isset .Params "tags" -}}
     {{- $tagsLen := len .Params.tags -}}
     {{- if gt $tagsLen 0 -}}
 {{- with "" }}{{ . }} {{ end -}}
@@ -16,4 +16,7 @@
 {{- end }}
 
 {{- if not (.Param "tags") -}}
-{{- end -}}
+{{- end -}}*/}}
+
+
+<!-- is this even being used??? -->
