--- a/mat383/assets/style.css
+++ b/mat383/assets/style.css
@@ -56,6 +56,9 @@ a{
 	text-underline-offset:3px;
 	text-decoration-line:none;
 }
+a:not(.postpreviewlink, .navlink, .tag, .tagcloudtext){
+	text-shadow: 0px 0px 4px rgba(0, 255, 0, 0.5);
+}
 h1, h2, h3, h4, h5, h6{
 	line-height:normal;
 	color:white;
@@ -186,6 +189,7 @@ div.balls-bg{
 	height: 60px;
 }
 .navbarcontent{
+	text-shadow: 0px 0px 4px rgba(255,255,255, 0.5);
 	max-width:900px;
 	margin:auto;
 	display:flex;
@@ -196,6 +200,7 @@ div.balls-bg{
 }
 .navbarcontent a:hover{
 	color:rgb(240, 240, 240) !important;
+	text-shadow: 0px 0px 8px rgba(255,255,255, 1);
 	border-color:#ccc !important;
 	text-decoration-line:none;
 }
@@ -205,6 +210,7 @@ div.balls-bg{
 	order:2;
 }
 a.activepage{
+	text-shadow: 0px 0px 7px rgba(0,255,0, 01);
 	color:rgb(0, 180, 0) !important;
 	border-color:rgb(0, 180, 0) !important;
 	border-width:0 0 2px 0;
@@ -225,10 +231,6 @@ a.activepage{
 }
 .activepage:not(:hover){
 	border-color:rgb(0, 180, 0);
-	@supports (background-image:linear-gradient(to top, rgba(0, 180, 0, 0.2), transparent)){ 
-		background-color:transparent;
-		background-image:linear-gradient(to top, rgba(0, 180, 0, 0.2), transparent);
-	}
 	transition:0.4s;
 }
 .homelink{
@@ -236,6 +238,8 @@ a.activepage{
 	font-size:150%;
 	font-weight:bold;
 	color:rgb(0, 180, 0);
+
+	filter:drop-shadow(0px 0px 3px rgba(255, 255, 255, 0.4));
 	transition:color 0.4s;
 	height:80%;
 	border:none !important;
@@ -256,6 +260,7 @@ a.activepage{
 	transition: 0.5s fill, 0.5s stroke;
 }
 .homelink:hover {
+	filter:drop-shadow(0px 0px 3px rgba(255, 255, 255, 0.8));
 	.navbarm {
 		transition: 0.1s;
 		fill:green;
@@ -291,6 +296,7 @@ a.activepage{
 	margin:0;
 }
 .tag, .tagcloud li{
+	text-shadow: none;
 	background:rgba(0, 180, 0, 0.2);
 	margin:0;
 	border-radius:3px;
@@ -315,25 +321,35 @@ a.activepage{
 .posttags:not(:hover){
 	opacity:0.5;
 	transition:0.4s;
-	transition-property:background, color, opacity;
+	transition-property:background, color, opacity, filter;
 	a{
+		filter:saturate(0);
 		background:rgba(90, 90, 90, 0.3) !important;
 		color:#ccc !important;
 		opacity:0.75;
 	}
 }
+.allpoststag.taggamedev {
+	filter:drop-shadow(0px 0px 4px rgba(172, 255, 39, 0.6));
+}
+.allpoststag.tagwebsite {
+	filter:drop-shadow(0px 0px 3px rgba(0, 255, 0, 0.4));
+}
 /* different coloured post tags */
 .tagoutside{
+	filter:drop-shadow(0px 0px 4px rgba(98, 217, 255, 0.7));
 	color:rgb(98, 217, 255) !important;
 	background-color:rgba(0, 100, 255, 0.4) !important;
 	a{color:rgb(98, 217, 255);}
 }
 .tagwebsite{
-	color:rgb(0, 180, 0) !important;
+	filter:drop-shadow(0px 0px 3px rgba(0, 255, 0, 0.6));
+	color:rgb(0, 200, 0) !important;
 	background:rgba(0, 180, 0, 0.2) !important;
-	a{color:rgb(0, 180, 0);}
+	a{color:rgb(0, 200, 0);}
 }
 .taggamedev{
+	filter:drop-shadow(0px 0px 4px rgb(172, 255, 39));
 	color:rgb(172, 255, 39) !important;
 	background:rgba(140, 255, 0, 0.2) !important;
 	a{color:rgb(172, 255, 39);}
