--- a/mat383/layouts/_default/baseof.html
+++ b/mat383/layouts/_default/baseof.html
@@ -31,10 +31,10 @@
 			<svg version="1.2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1348 1100" preserveAspectRatio="xMinYMin meet" style="width: 100%; height: 100%; max-height:65px; max-width:70px;"><path class="navbarm" d="m118 999l78-897h363l124 560 183-560h369l-23 897h-244l20-640-211 640h-241l-144-640-42 640z"/></svg>
 		</a>
 		<div class="otherlinks"> <!--If the current page is equal to this URL, give it a CSS class (might have to change this later)-->
-			<a href="/blog" style="color:#ccc" class="{{if or (hasPrefix .RelPermalink "/blog/") (hasPrefix .RelPermalink "/tags/")}}activepage{{end}}">Blog</a>
-			<a href="/now" style="color:#ccc" class="{{if hasPrefix .RelPermalink "/now/"}}activepage{{end}}">Now</a>
-			{{/*<a href="/projects" style="color:#ccc" class="{{if hasPrefix .RelPermalink "/projects/"}}activepage{{end}}">Projects</a>*/}}
-			<a href="/about" style="color:#ccc" class="{{if hasPrefix .RelPermalink "/about/"}}activepage{{end}}">About</a>
+			<a href="/blog" style="color:#ccc" class="navlink {{if or (hasPrefix .RelPermalink "/blog/") (hasPrefix .RelPermalink "/tags/")}}activepage{{end}}">Blog</a>
+			<a href="/now" style="color:#ccc" class="navlink {{if hasPrefix .RelPermalink "/now/"}}activepage{{end}}">Now</a>
+			{{/*<a href="/projects" style="color:#ccc" class="navlink {{if hasPrefix .RelPermalink "/projects/"}}activepage{{end}}">Projects</a>*/}}
+			<a href="/about" style="color:#ccc" class="navlink {{if hasPrefix .RelPermalink "/about/"}}activepage{{end}}">About</a>
 		</div>
 	</div>
 </nav>
@@ -86,7 +86,7 @@
 	{{partial "tagsite.html" .}}
 	{{partial "list.html" .}}
 {{else if hasPrefix .RelPermalink "/tags/"}} {{/* to specify new tag colours, modify the line below, the one in tagcloud.html, and the one in taglist.html */}}
-	<h2 style="margin-bottom:50px">Showing all posts tagged with <b class="tag {{if eq .Title "Outside"}}tagoutside{{else}}{{if eq .Title "Website"}}tagwebsite{{end}}{{end}}{{if eq .Title "Game Dev"}}taggamedev{{end}}">{{block "title" .}}{{end}}</b>:</h2>
+	<h2 style="margin-bottom:50px">Showing all <b class="tag allpoststag {{if eq .Title "Outside"}}tagoutside{{else}}{{if eq .Title "Website"}}tagwebsite{{end}}{{end}}{{if eq .Title "Game Dev"}}taggamedev{{end}}">{{block "title" .}}{{end}}</b> posts:</h2>
 	{{partial "list.html" .}}
 {{end}}
 {{ if .IsHome }}
