--- a/mat383/assets/style.css
+++ b/mat383/assets/style.css
@@ -477,7 +477,6 @@ img, video{
 	margin-left:auto;
 	margin-right:auto;
 	display:block;
-	object-fit:scale-down;
 }
 .blurimgcontainer{
 	position: relative;
@@ -660,6 +659,15 @@ svg{
 	margin-top:-8px;
 	opacity:0.75;
 	text-shadow: 0px 0px 4px rgba(0, 0, 0, 1);
+}
+.videoplayicon{
+	position:absolute;
+	z-index: 1;
+	width:30%;
+	top:50%;
+	left:50%;
+	transform:translate(-50%,-60%);
+	opacity:0.5;
 }
 
 
@@ -1413,9 +1421,6 @@ footer a:hover{
 	.navbarcontent{flex-direction:column;align-items:center;}	
 	.homelink:hover{translate:0 3px;}
 	.hero{margin-top:-15px;margin-bottom:25px;}
-	.postpreviewcoverimg {
-		translate:0px -24px;
-	}
 }
 @media (max-width:300px){
 	.hero{padding:50px 50px 0 50px;}
