--- a/mat383/assets/style.css
+++ b/mat383/assets/style.css
@@ -959,10 +959,12 @@ svg{
 	padding-left: 0;
 	list-style: none;
 	margin: 0 auto;
-	width:fit-content;
+	max-width:500px;
 	display:flex;
+	justify-content: center;
 	align-items:center;
-	gap:20px;
+	flex-wrap: wrap;
+	gap:0px 20px;
 }
 
 
@@ -1232,7 +1234,7 @@ footer a:hover{
 @keyframes sizeanimation{
     0%{ transform:scale(1); opacity:0.5; }
 	1%{ opacity:1; }
-    50%{ transform:scale(1.3); }
+    50%{ transform:scale(1.2); }
     100%{ transform:scale(1); opacity:1; }
 }
 @keyframes sizeanimationreverse{
