--- a/mat383/assets/style.css
+++ b/mat383/assets/style.css
@@ -449,6 +449,12 @@ dd, blockquote{
 	border-style:solid;
 	border-color:#ccc;
 	padding:2px 10px 2px 8px;
+	:first-child{
+		margin-top: 6px;
+	}
+	:last-child{
+		margin-bottom: 6px;
+	}
 }
 blockquote{
 	margin-left:30px;
@@ -480,9 +486,8 @@ img, video{
 	display:block;
 }
 .blurimgcontainer{
+	margin: 32px auto;
 	position: relative;
-	margin-left:auto;
-	margin-right:auto;
 }
 .blurimg{
 	width:100%;
@@ -491,7 +496,7 @@ img, video{
 .blurimg._2 {
 	position: relative;
 	z-index: -1;
-	filter: blur(20px) brightness(1.5);
+	filter: blur(15px) brightness(1.5);
 	img{
 		width:100%;
 		position: absolute;
@@ -532,6 +537,9 @@ svg{
 		font-size:38px;
 		margin-top:0px;
 		margin-bottom:0px;
+	}
+	.datewritten{
+		margin-bottom: 30px;
 	}
 }
 
