--- a/mat383/layouts/shortcodes/guestbook.html
+++ b/mat383/layouts/shortcodes/guestbook.html
@@ -1,4 +1,4 @@
-<div id="loadCommentsContainer" class="custombuttoncontainer" style="margin: 0 auto;" id="commentSection">
+<div class="custombuttoncontainer" style="margin: 0 auto;" id="commentSection">
     <a>
         <button id="loadComments" class="custombutton _1" style="--color:rgb(0, 180, 0); --paddingx:13px; --paddingy:18px">
             <p>Load Guestbook</p><img class="custombuttonicon" src="/icons/guestbook-green.png" alt="Load Guestbook" style="height:2.25em; width: auto;">
