--- a/mat383/assets/style.css
+++ b/mat383/assets/style.css
@@ -260,14 +260,12 @@ a.activepage{
 	transition: 0.5s fill, 0.5s stroke;
 }
 .homelink:hover {
-	filter:drop-shadow(0px 0px 3px rgba(255, 255, 255, 0.8));
+	filter:drop-shadow(0px 0px 5px rgba(255, 255, 255, 0.8));
 	.navbarm {
 		transition: 0.1s;
 		fill:green;
 		stroke:white;
 	}
-	translate:3px 0;
-	transition: 0.05s translate;
 }
 
 
@@ -563,7 +561,7 @@ svg{
 	flex-grow: 1;
 	width:100%;
 
-	transition:0.3s scale cubic-bezier(0.075, 0.82, 0.165, 1);
+	transition:0.3s scale cubic-bezier(0.33, 1, 0.68, 1);
 }
 .postpreviewlink:hover{
 	scale:1.05;
@@ -929,12 +927,15 @@ svg{
 	border-radius:5px;
 	background-color:#08080862;
 	border:2px solid var(--color);
+	transition: 0.2s opacity, 0.2s border;
 	p, a{
 		color: var(--color);
 		margin:var(--paddingy) 0;
+		transition:0.2s color;
 	}
 	.loadcommentsicon, .custombuttonicon{
 		filter:saturate(100%) brightness(100%);
+		transition:0.1s filter;
 	}
 }
 .loadcommentsbutton._2, .custombutton._2{
@@ -968,12 +969,13 @@ svg{
 		transition:0.3s opacity;
 	}
 }
+/*
 .loadcommentsbutton:hover, .custombutton:hover{
 	.loadcommentsicon, .custombuttonicon{
 		animation:shake-pop 0.15s both;
 		animation-timing-function:linear;
 	}
-}
+}*/
 .loadcommentsbutton p, .custombutton p{
 	display:inline-block;
 	text-align:center;
@@ -1034,13 +1036,13 @@ footer a:hover{
 	width:88px;
 	height:31px;
 }
-.footerhover{
-	display:inline-block;
-	margin-bottom:15px;
-}
 .footerhover:not(:hover){
 	opacity:0.5;
-	transition:0.2s;
+	transition:0.4s;
+}
+.footertext{
+	display:inline-block;
+	margin-bottom:15px;
 }
 .sizeanimation:not(:hover){
 	opacity:0.5;
@@ -1124,7 +1126,7 @@ footer a:hover{
 }
 @keyframes postpreviewhover{
 	0%{filter: brightness(1) saturate(1.0)}
-	10%{filter: brightness(1.4) saturate(1.5)}
+	10%{filter: brightness(1.4) saturate(1.3)}
 	100%{filter: brightness(1.1) saturate(1.1)}
 }
 
@@ -1311,7 +1313,6 @@ footer a:hover{
 @media (max-width:340px){
 	.navbar{height:95px;padding:5px;}
 	.navbarcontent{flex-direction:column;align-items:center;}	
-	.homelink:hover{translate:0 3px;}
 	.hero{margin-top:-15px;margin-bottom:25px;}
 	.heroimage{
 		margin: 2.5vw auto 5vw;
