New post, small fixes, updated layout

--- a/mat383/assets/style.css
+++ b/mat383/assets/style.css
@@ -830,6 +830,7 @@ svg{
 	text-align: right;
 	display:block;
 	padding:12px 13px 12px 13px;
+	margin: 8px 24px;
 	max-width:800px;
 	border-radius:5px;
 	background-color:#08080862;
@@ -1169,7 +1170,7 @@ footer a:hover{
 	.ytbutton {
 		p{display: block;}
 		padding:4px 12px 8px 12px;
-		margin:-20px -10px 0 0;
+		margin:-16px 16px 0px 16px;
 		.ytbuttonicon{
 			margin: 5px 0 0 0;
 		}
