--- a/mat383/layouts/shortcodes/img.html
+++ b/mat383/layouts/shortcodes/img.html
@@ -23,7 +23,7 @@
 	</div>
 	{{- if .Get "link"}}</a>{{ end -}}
 	{{- with .Get "caption" -}}
-	<figcaption>
+	<figcaption class="figcaption" style="margin-top:-18px;">
 	{{- . -}}
 	</figcaption>
 	{{- end -}}
